--- a/app/globals.css
+++ b/app/globals.css
@@ -65,6 +65,15 @@
     --ring: 212.7 26.8% 83.9%;
   }
 
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(10, 1fr);
+      /* Adjust as needed */
+      gap: 1px;
+      /* Adjust as needed */
+    }
+  
+   
     @keyframes fadeIn {
       0% {
         opacity: 100%;
